--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -2,3 +2,4 @@
 $txt-primary: #666;
 $txt-size: 1.5rem;
 $border-radius: 2rem;
+$logs-width: 22rem;
